--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,7 +1,7 @@
 MODELS:
   FASTER_RCNN_R_50_FPN_1X:
     # Change _BASE_ path to your own path (/home/<user>/Mosquitoes/<pasta_experimento>/configs/faster_rcnn_R_50_FPN_1X/Base-RCNN-FPN.yaml)
-    _BASE_: "/home/isabelle.melo/proc/Mosquitoes/faster_detectron2_copy/configs/faster_rcnn_R_50_FPN_1x/Base-RCNN-FPN.yaml"
+    _BASE_: "/home/umberto.pereira/Mosquitoes/SIAC_2024/configs/Base-RCNN-FPN.yaml"
     MODEL:
       WEIGHTS: "detectron2://COCO-Detection/faster_rcnn_R_50_FPN_1x/137257794/model_final_b275ba.pkl"
       MASK_ON: False # True or False
@@ -22,9 +22,9 @@ MODELS:
         NUM_CLASSES: 1
 REGISTER_DATASETS:
   # Change JSON_PATH tp your own path (/home/<user>/Mosquitoes/dataset/v2/coco_json_folds)
-  JSON_PATH: "/home/isabelle.melo/proc/Mosquitoes/dataset/v2/coco_json_folds/5folds/40m" # Path to COCO JSON files
+  JSON_PATH: "/home/umberto.pereira/Mosquitoes/dataset/v2/coco_json_folds/5folds/40m" # Path to COCO JSON files
   # Change FRAMES_PATH to your own path (/home/<user>/Mosquitoes/dataset/v2/frames)
-  FRAMES_PATH: "/home/isabelle.melo/proc/Mosquitoes/dataset/v2/frames" # Path to frames files
+  FRAMES_PATH: "/home/umberto.pereira/Mosquitoes/dataset/v2/frames" # Path to frames files
   ### The commands are suited for tires, if you want to detect watertanks, then do:
   # JSON_PATH = "/home/<user>/Mosquitoes/dataset/v2/watertanks"
   # FRAMES_PATH = "/home/<user>/Mosquitoes/dataset/v2/frames"
@@ -35,7 +35,7 @@ TRAINING:
   TRAINING_NUM_WORKERS: 4
   BATCH_SIZE_PER_IMAGE: 32
   IMAGES_PER_BATCH: 4
-  PATIENCE: 20
+  PATIENCE: 1000
   MAX_ITER: 20000
   MIN_DELTA: 0.019
   LEARNING_RATE: 0.002
@@ -46,7 +46,7 @@ TRAINING:
   OBJECT: 'tire' # 'tire', 'watertank'
 TEST:
   TEST_WEIGHTS: "model_early_stopping.pth"
-  OUTPUT_DIR: "outputs/faster_rcnn_R_50_FPN_1x/teste_IC" # outputs/model_name/experiment_name
+  OUTPUT_DIR: "outputs/faster_rcnn_R_50_FPN_1x/train_val_test" # outputs/model_name/experiment_name
 AUGMENTATION:
   ENABLE: True # True or False
 
