--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,7 +1,7 @@
 MODELS:
   FASTER_RCNN_R_50_FPN_1X:
     # Change _BASE_ path to your own path (/home/<user>/Mosquitoes/<pasta_experimento>/configs/faster_rcnn_R_50_FPN_1X/Base-RCNN-FPN.yaml)
-    _BASE_: "/home/umberto.pereira/Mosquitoes/SIAC_2024/configs/Base-RCNN-FPN.yaml"
+    _BASE_: "/home/umberto.pereira/Mosquitoes/MBGd/configs/Base-RCNN-FPN.yaml"
     MODEL:
       WEIGHTS: "detectron2://COCO-Detection/faster_rcnn_R_50_FPN_1x/137257794/model_final_b275ba.pkl"
       MASK_ON: False # True or False
@@ -22,13 +22,13 @@ MODELS:
         NUM_CLASSES: 1
 REGISTER_DATASETS:
   # Change JSON_PATH tp your own path (/home/<user>/Mosquitoes/dataset/v2/coco_json_folds)
-  JSON_PATH: "/home/umberto.pereira/Mosquitoes/dataset/v2/coco_json_folds/5folds/40m" # Path to COCO JSON files
+  JSON_PATH: "/nfs/proc/projeto.dpcm/resized_images/tire/coco_json_tire" # Path to COCO JSON files
   # Change FRAMES_PATH to your own path (/home/<user>/Mosquitoes/dataset/v2/frames)
-  FRAMES_PATH: "/home/umberto.pereira/Mosquitoes/dataset/v2/frames" # Path to frames files
+  FRAMES_PATH: "/nfs/proc/projeto.dpcm/resized_images/tire" # Path to dir /images where frames are
   ### The commands are suited for tires, if you want to detect watertanks, then do:
   # JSON_PATH = "/home/<user>/Mosquitoes/dataset/v2/watertanks"
   # FRAMES_PATH = "/home/<user>/Mosquitoes/dataset/v2/frames"
-  FOLDS: 5
+  FOLDS: 1
   OBJECTS: ["tire"] # ["tire", "watertank"]
 TRAINING:
   VAL_PERIOD: 1
@@ -46,7 +46,7 @@ TRAINING:
   OBJECT: 'tire' # 'tire', 'watertank'
 TEST:
   TEST_WEIGHTS: "model_early_stopping.pth"
-  OUTPUT_DIR: "outputs/faster_rcnn_R_50_FPN_1x/train_val_test" # outputs/model_name/experiment_name
+  OUTPUT_DIR: "outputs/faster_rcnn_R_50_FPN_1x/faster_resized_tires_1fold" # outputs/model_name/experiment_name
 AUGMENTATION:
   ENABLE: True # True or False
 
