--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -22,14 +22,14 @@ MODELS:
         NUM_CLASSES: 1
 REGISTER_DATASETS:
   # Change JSON_PATH tp your own path (/home/<user>/Mosquitoes/dataset/v2/coco_json_folds)
-  JSON_PATH: "/nfs/proc/projeto.dpcm/resized_images/tire/coco_json_tire" # Path to COCO JSON files
+  JSON_PATH: "/nfs/proc/projeto.dpcm/resized_images/watertank/coco_json_watertank" # Path to COCO JSON files
   # Change FRAMES_PATH to your own path (/home/<user>/Mosquitoes/dataset/v2/frames)
-  FRAMES_PATH: "/nfs/proc/projeto.dpcm/resized_images/tire" # Path to dir /images where frames are
+  FRAMES_PATH: "/nfs/proc/projeto.dpcm/resized_images/watertank" # Path to dir /images where frames are
   ### The commands are suited for tires, if you want to detect watertanks, then do:
   # JSON_PATH = "/home/<user>/Mosquitoes/dataset/v2/watertanks"
   # FRAMES_PATH = "/home/<user>/Mosquitoes/dataset/v2/frames"
-  FOLDS: 1
-  OBJECTS: ["tire"] # ["tire", "watertank"]
+  FOLDS: 5
+  OBJECTS: ["watertank"] # ["tire", "watertank"]
 TRAINING:
   VAL_PERIOD: 1
   TRAINING_NUM_WORKERS: 4
@@ -43,10 +43,10 @@ TRAINING:
   STEPS: [] # [initial_step, final_step]
   CUDA_DEVICE: 0
   MODEL_NAME: 'faster_rcnn_R_50_FPN_1x'
-  OBJECT: 'tire' # 'tire', 'watertank'
+  OBJECT: 'watertank' # 'tire', 'watertank'
 TEST:
   TEST_WEIGHTS: "model_early_stopping.pth"
-  OUTPUT_DIR: "outputs/faster_rcnn_R_50_FPN_1x/faster_resized_tires_1fold" # outputs/model_name/experiment_name
+  OUTPUT_DIR: "outputs/faster_rcnn_R_50_FPN_1x/faster_resized_watertanks_5fold" # outputs/model_name/experiment_name
 AUGMENTATION:
   ENABLE: True # True or False
 
